--- a/contato.html
+++ b/contato.html
@@ -14,6 +14,7 @@
     </p>
     <ul>
       <li>Linkedin: www.linkedin.com/in/felipecisneiros</li>
+      <li>Github: felipecisneiros</li>
       <li>E-mail: fca@cesar.school</li>
       <li>Instagram: _cisneiros</li>
       <li>Whatsapp/Telefone: (81)99144-9428</li>
