--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       
     </p>
     <ul>
-      <li><a href="http://127.0.0.1:5500/sobre.html">Sobre Mim</a></li>
-      <li><a href="http://127.0.0.1:5500/projetos.html">Projetos</a></li>
-      <li><a href="http://127.0.0.1:5500/contato.html">Contatos</a></li>
+      <li><a href="sobre.html">Sobre Mim</a></li>
+      <li><a href="projetos.html">Projetos</a></li>
+      <li><a href="contato.html">Contatos</a></li>
     </ul>
   </body>
 </html>
