--- a/sobre.html
+++ b/sobre.html
@@ -79,7 +79,7 @@
       voltar para a página inicial, obrigado por ler até aqui.
     </p>
     <li>
-      <a href="http://127.0.0.1:5500/index.html">Voltar a página inicial</a>
+      <a href="index.html">Voltar a página inicial</a>
     </li>
   </body>
 </html>
