--- a/projetos.html
+++ b/projetos.html
@@ -48,7 +48,7 @@
       abaixo o link para voltar ao menu principal:
     </p>
     <li>
-      <a href="http://127.0.0.1:5500/index.html"> Voltar a página inicial</a>
+      <a href="index.html"> Voltar a página inicial</a>
     </li>
   </body>
 </html>
