--- a/contato.html
+++ b/contato.html
@@ -33,7 +33,7 @@
       Obrigado pelo carinho. Segue o link caso queira voltar ao menu principal:
     </p>
     <li>
-      <a href="http://127.0.0.1:5500/index.html"> Voltar a página inicial</a>
+      <a href="index.html"> Voltar a página inicial</a>
     </li>
   </body>
 </html>
